Tableau & dégradé css

--- a/html-css/Mini_site_guyane/index.html
+++ b/html-css/Mini_site_guyane/index.html
@@ -18,7 +18,7 @@
         <ul>
             <a href="../Mini_site_guyane/histoire.html"><li>Histoire de la guyane</li></a>
             <a href="../Mini_site_guyane/plan.html"><li>Plan de du Pays</li></a>
-            <a href=""><li>Célebitées Guyanaises</li></a>
+            <a href="../Mini_site_guyane/celebrite.html"><li>Célebitées Guyanaises</li></a>
             <a href=""><li>Activité et Loisir</li></a>
         </ul>
     </fieldset>
