--- a/html-css/Mini_site_guyane/plan.html
+++ b/html-css/Mini_site_guyane/plan.html
@@ -14,9 +14,10 @@
 
     <section>
         <img src="../Mini_site_guyane/css/image/plan-guyane-francaise.png">
-        <div>
-
-        </div>
     </section>
+
+    <footer>
+            <a href="../Mini_site_guyane/index.html">Retour</a>
+    </footer>
 </body>
 </html>
