--- a/TP/TP5_CV/index.html
+++ b/TP/TP5_CV/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Mon cv Perso">
     <title>C.V - Acceuil</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
     <!-- les parties notéés "pf" sont ce qu'on appelle les parties fixe de la page -->
@@ -27,8 +28,7 @@
         </div>
     </nav>
 
-    <art
-    icle>
+    <article>
         <section id="presentation">
             <h1>Qui sui-je ?</h1>
             <div class="sec">
@@ -45,57 +45,51 @@
             </div>
         </section>
 
-        <secion id="parcours">
-            <h2>Parcours et Experience</h2>
-
+        <section id="parcours">
+            <h2>Parcours et éxperience</h2>
             <div class="sec">
-                <h2>Experience professionnel</h2>
                 <div class="exp">
-                    <div class="gauche">2014 -en cours</div>
+                    <div class="gauche">2014-en cours</div>
                     <div class="droite">
                         <h3>developpeur web</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia error expedita est nulla numquam velit ex sed cupiditate placeat nobis corrupti, cum dicta voluptatibus porro officiis at animi ab cumque.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus cupiditate dignissimos
+                            nostrum hic, doloremque facilis vitae sequi aspernatur, eius aperiam placeat obcaecati at
+                            quos officia assumenda dolorem vel neque. Aut.</p>
                     </div>
                 </div>
-
                 <div class="exp">
                     <div class="gauche"> 2010 - 2014</div>
                     <div class="droite">
                         <h3>standiste</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa dolore incidunt quo laudantium perferendis iste cupiditate provident molestiae, natus nemo corporis eligendi ducimus dolores? Ut molestiae tempora voluptatibus. Enim, unde.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam exercitationem error
+                            laboriosam harum dolorem! Delectus, neque! Earum iusto autem dolorum! Optio voluptatem quae
+                            commodi sapiente dolore possimus. Sint, accusantium nihil!</p>
                     </div>
                 </div>
-
                 <div class="exp">
-                    <div class="gauche">2008 -2010</div>
+                    <div class="gauche"> 2008 - 2010</div>
                     <div class="droite">
                         <h3>mecanicien</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed molestiae eveniet error mollitia quas doloribus nobis quae provident deleniti, veritatis, officiis laboriosam et nemo, suscipit accusamus eaque velit cum! Illum?   ;
-
-                        </p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam exercitationem error
+                            laboriosam harum
+                            dolorem! Delectus, neque! Earum iusto autem dolorum! Optio voluptatem quae commodi sapiente
+                            dolore
+                            possimus. Sint, accusantium nihil!</p>
                     </div>
                 </div>
-
-                <h2>Parcours Scolaire</h2>
                 <div class="exp">
-                    <div class="gauche">2004 - 2008</div>
+                    <div class="gauche"> 2004 - 2008</div>
                     <div class="droite">
-                        <h3>college Omeba Tobo</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, qui officia fuga ipsa nesciunt cum provident assumenda ipsum et alias perspiciatis excepturi tempore adipisci non repellat ad saepe nostrum aliquam?</p>
+                        <h3>college omeba tobo></h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam exercitationem error
+                            laboriosam harum
+                            dolorem! Delectus, neque! Earum iusto autem dolorum! Optio voluptatem quae commodi sapiente
+                            dolore
+                            possimus. Sint, accusantium nihil!</p>
                     </div>
-
-                    
-                </div>
-
-                <div class="exp">
-                        <div class="gauche">2008 - 2012</div>
-                        <div class="droite">
-                            <h3>college Omeba Tobo</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla iste voluptas maxime! Consequatur facere, fugiat eveniet debitis nemo nobis provident molestiae asperiores eligendi iste dolorum dicta harum perferendis animi maxime!</p>
-                        </div>
                 </div>
             </div>
-        </secion>
+        </section>
 
         <section id="competences">
             <h1>Compétences & niveau</h1>
