--- a/TP/TP5_CV/contact.html
+++ b/TP/TP5_CV/contact.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Mon cv Perso">
     <title>C.V - Contact</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
     <!-- les parties notéés "pf" sont ce qu'on appelle les parties fixe de la page -->
@@ -26,6 +27,18 @@
             </ul>
         </div>
     </nav>
+
+    <article>
+            <section id="cordo">
+                <h2><i class="fas fa-phone"></i> - Telephone</h2>
+
+                <h2><i class="fas fa-envelope"></i> - mail</h2>
+
+                <h2><i class="fab fa-instagram"></i> - instagram</h2>
+
+                <h2><i class="fab fa-facebook-square"></i> - facebook</h2>
+            </section>
+        </article>
 
     <!-- Pied de page (pf)-->
     <footer>
