--- a/TP/TP5_CV/exp.html
+++ b/TP/TP5_CV/exp.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Mon cv Perso">
     <title>C.V - Experience</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 </head>
 <body>
     <!-- les parties notéés "pf" sont ce qu'on appelle les parties fixe de la page -->
@@ -26,6 +27,54 @@
             </ul>
         </div>
     </nav>
+
+    <!-- experience professionnel -->
+    <section>
+        <div>
+            <ul>
+                <li>2010 - 2018</li>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia qui, adipisci, facere eos deleniti dicta, reprehenderit exercitationem earum ipsam neque aliquam sapiente quisquam. Consequatur temporibus quasi incidunt explicabo, iste itaque?
+                Tempore quis, minus nihil impedit quibusdam, maiores qui sapiente maxime nobis delectus hic a expedita reiciendis dignissimos sint dolor dolore ab adipisci atque, eum consequuntur quos ipsa. Distinctio, et. Voluptatum.
+                Iste, tempore nam? Similique sapiente esse fugiat facilis laborum saepe error dolores delectus minima reiciendis magnam impedit molestiae numquam a ad iusto, deserunt, cupiditate provident? Minima omnis pariatur cupiditate? Obcaecati?
+                Ut facere architecto corrupti sapiente perspiciatis veritatis quo ipsam autem, deleniti omnis quod blanditiis distinctio dolorem amet eos maiores ipsum fuga velit, voluptatum alias eaque assumenda totam quae? Officia, iste!</p>
+                <li>2010 - 2018</li>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia qui, adipisci, facere eos deleniti dicta, reprehenderit exercitationem earum ipsam neque aliquam sapiente quisquam. Consequatur temporibus quasi incidunt explicabo, iste itaque?
+                Tempore quis, minus nihil impedit quibusdam, maiores qui sapiente maxime nobis delectus hic a expedita reiciendis dignissimos sint dolor dolore ab adipisci atque, eum consequuntur quos ipsa. Distinctio, et. Voluptatum.
+                Iste, tempore nam? Similique sapiente esse fugiat facilis laborum saepe error dolores delectus minima reiciendis magnam impedit molestiae numquam a ad iusto, deserunt, cupiditate provident? Minima omnis pariatur cupiditate? Obcaecati?
+                Ut facere architecto corrupti sapiente perspiciatis veritatis quo ipsam autem, deleniti omnis quod blanditiis distinctio dolorem amet eos maiores ipsum fuga velit, voluptatum alias eaque assumenda totam quae? Officia, iste!</p>
+                <li>2010 - 2018</li>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia qui, adipisci, facere eos deleniti dicta, reprehenderit exercitationem earum ipsam neque aliquam sapiente quisquam. Consequatur temporibus quasi incidunt explicabo, iste itaque?
+                Tempore quis, minus nihil impedit quibusdam, maiores qui sapiente maxime nobis delectus hic a expedita reiciendis dignissimos sint dolor dolore ab adipisci atque, eum consequuntur quos ipsa. Distinctio, et. Voluptatum.
+                Iste, tempore nam? Similique sapiente esse fugiat facilis laborum saepe error dolores delectus minima reiciendis magnam impedit molestiae numquam a ad iusto, deserunt, cupiditate provident? Minima omnis pariatur cupiditate? Obcaecati?
+                Ut facere architecto corrupti sapiente perspiciatis veritatis quo ipsam autem, deleniti omnis quod blanditiis distinctio dolorem amet eos maiores ipsum fuga velit, voluptatum alias eaque assumenda totam quae? Officia, iste!</p>
+                <li>2010 - 2018</li>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia qui, adipisci, facere eos deleniti dicta, reprehenderit exercitationem earum ipsam neque aliquam sapiente quisquam. Consequatur temporibus quasi incidunt explicabo, iste itaque?
+                Tempore quis, minus nihil impedit quibusdam, maiores qui sapiente maxime nobis delectus hic a expedita reiciendis dignissimos sint dolor dolore ab adipisci atque, eum consequuntur quos ipsa. Distinctio, et. Voluptatum.
+                Iste, tempore nam? Similique sapiente esse fugiat facilis laborum saepe error dolores delectus minima reiciendis magnam impedit molestiae numquam a ad iusto, deserunt, cupiditate provident? Minima omnis pariatur cupiditate? Obcaecati?
+                Ut facere architecto corrupti sapiente perspiciatis veritatis quo ipsam autem, deleniti omnis quod blanditiis distinctio dolorem amet eos maiores ipsum fuga velit, voluptatum alias eaque assumenda totam quae? Officia, iste!</p>
+                <li>2010 - 2018</li>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia qui, adipisci, facere eos deleniti dicta, reprehenderit exercitationem earum ipsam neque aliquam sapiente quisquam. Consequatur temporibus quasi incidunt explicabo, iste itaque?
+                Tempore quis, minus nihil impedit quibusdam, maiores qui sapiente maxime nobis delectus hic a expedita reiciendis dignissimos sint dolor dolore ab adipisci atque, eum consequuntur quos ipsa. Distinctio, et. Voluptatum.
+                Iste, tempore nam? Similique sapiente esse fugiat facilis laborum saepe error dolores delectus minima reiciendis magnam impedit molestiae numquam a ad iusto, deserunt, cupiditate provident? Minima omnis pariatur cupiditate? Obcaecati?
+                Ut facere architecto corrupti sapiente perspiciatis veritatis quo ipsam autem, deleniti omnis quod blanditiis distinctio dolorem amet eos maiores ipsum fuga velit, voluptatum alias eaque assumenda totam quae? Officia, iste!</p>
+                <li>2010 - 2018</li>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia qui, adipisci, facere eos deleniti dicta, reprehenderit exercitationem earum ipsam neque aliquam sapiente quisquam. Consequatur temporibus quasi incidunt explicabo, iste itaque?
+                Tempore quis, minus nihil impedit quibusdam, maiores qui sapiente maxime nobis delectus hic a expedita reiciendis dignissimos sint dolor dolore ab adipisci atque, eum consequuntur quos ipsa. Distinctio, et. Voluptatum.
+                Iste, tempore nam? Similique sapiente esse fugiat facilis laborum saepe error dolores delectus minima reiciendis magnam impedit molestiae numquam a ad iusto, deserunt, cupiditate provident? Minima omnis pariatur cupiditate? Obcaecati?
+                Ut facere architecto corrupti sapiente perspiciatis veritatis quo ipsam autem, deleniti omnis quod blanditiis distinctio dolorem amet eos maiores ipsum fuga velit, voluptatum alias eaque assumenda totam quae? Officia, iste!</p>
+                <li>2010 - 2018</li>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia qui, adipisci, facere eos deleniti dicta, reprehenderit exercitationem earum ipsam neque aliquam sapiente quisquam. Consequatur temporibus quasi incidunt explicabo, iste itaque?
+                Tempore quis, minus nihil impedit quibusdam, maiores qui sapiente maxime nobis delectus hic a expedita reiciendis dignissimos sint dolor dolore ab adipisci atque, eum consequuntur quos ipsa. Distinctio, et. Voluptatum.
+                Iste, tempore nam? Similique sapiente esse fugiat facilis laborum saepe error dolores delectus minima reiciendis magnam impedit molestiae numquam a ad iusto, deserunt, cupiditate provident? Minima omnis pariatur cupiditate? Obcaecati?
+                Ut facere architecto corrupti sapiente perspiciatis veritatis quo ipsam autem, deleniti omnis quod blanditiis distinctio dolorem amet eos maiores ipsum fuga velit, voluptatum alias eaque assumenda totam quae? Officia, iste!</p>
+                <li>2010 - 2018</li>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia qui, adipisci, facere eos deleniti dicta, reprehenderit exercitationem earum ipsam neque aliquam sapiente quisquam. Consequatur temporibus quasi incidunt explicabo, iste itaque?
+                Tempore quis, minus nihil impedit quibusdam, maiores qui sapiente maxime nobis delectus hic a expedita reiciendis dignissimos sint dolor dolore ab adipisci atque, eum consequuntur quos ipsa. Distinctio, et. Voluptatum.
+                Iste, tempore nam? Similique sapiente esse fugiat facilis laborum saepe error dolores delectus minima reiciendis magnam impedit molestiae numquam a ad iusto, deserunt, cupiditate provident? Minima omnis pariatur cupiditate? Obcaecati?
+                Ut facere architecto corrupti sapiente perspiciatis veritatis quo ipsam autem, deleniti omnis quod blanditiis distinctio dolorem amet eos maiores ipsum fuga velit, voluptatum alias eaque assumenda totam quae? Officia, iste!</p>
+            </ul>
+        </div>
+    </section>
 
     <!-- Pied de page (pf)-->
     <footer>
