--- a/TP/TP6/visite.html
+++ b/TP/TP6/visite.html
@@ -36,7 +36,7 @@
     </nav>
 
     <section>
-       <div class="centre">
+       <div class="gauche">
             <img src="img/rochefort03_xlansade.jpg" class="img" alt="image">
        </div>
        <div class="droite">
