--- a/Javascript/bases.html
+++ b/Javascript/bases.html
@@ -21,6 +21,7 @@
   <!--<script src="js/comparaison.js"></script>-->
   <!-- <script src="js/boucle.js"></script> -->
   <!--<script src="js/xampp.js"></script>--> 
+  <script src="1_bonjour.html"></script>
   
 </head>
 <body>
@@ -38,8 +39,8 @@
 
     alert(monObjetPersonne);
   </script>-->
-  <img id="img" src="" alt="">
-  <script src="js/exo.js"></script>
+  <!-- <img id="img" src="" alt="">
+  <script src="js/exo.js"></script> -->
 </body>
 </html>
 
